k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chapar
  labels:
    app.kubernetes.io/name: chapar
