k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chapar-api-svc
  namespace: chapar
  labels:
    app: chapar-api
spec:
  selector:
    app: chapar-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
